--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.0.10"
+    "@astrojs/vue": "^3.0.0",
+    "astro": "^3.0.10",
+    "vue": "^3.3.4"
   }
 }
